@@ -1,3 +1,10 @@
+2005-06-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/sj-play.c: (select_track), (play), (pause), (stop),
+	(cb_hop_track), (cb_state), (on_tracklist_row_activate):
+	  Also set window title when we auto-swap songs, and keep
+	  memory while PAUSED.
+
 2005-06-23  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
